2：将左侧的菜单精简成2个大菜单，第一个为【概况】且无子菜单，第二个为【虚拟机】且子菜单为[栈]。 3：移除栈清单页面中，表格最后一列的操作功能。 4：将栈详情页面中每个表格的最后一列编辑功能去除掉。 5：栈详情页面事件标签表格中，访问有些栈资源会提示不存在问题，需要将这些不存在的链接去除掉。 6：将栈详情页面表格显示的内容与dashboard进行对应，将日期显示进行格式化，显示成"yyyy-MM-dd hh:mm:ss"形式。 7：分别对admin管理员和testsw普通用户进行功能测试，验证是否因角色不同，导致某些功能不能操作。 8：增加端口详情界面。

--- a/web/app/components/servers/instanceDetail.html
+++ b/web/app/components/servers/instanceDetail.html
@@ -114,7 +114,7 @@
                                     <hr class="header_rule">
                                     <dl>
                                         <dt>连接到</dt>
-                                        <dd>{{server["os-extended-volumes:volumes_attached"]}}</dd>
+                                        <dd ng-if="server['os-extended-volumes:volumes_attached']==''">未连接到云硬盘</dd>
                                     </dl>
                                 </div>
 
