--- a/web/app/components/servers/resourceDetail.html
+++ b/web/app/components/servers/resourceDetail.html
@@ -14,6 +14,8 @@
                 <dd>
                     <a ng-if="resource.resource_type=='OS::Heat::ResourceGroup'" force-Href="#/viewStack?id={{resource.physical_resource_id}}">{{resource.physical_resource_id}}</a>
                     <a ng-if="resource.resource_type=='OS::Nova::Server'" force-Href="#/viewInstance?id={{resource.physical_resource_id}}">{{resource.physical_resource_id}}</a>
+                    <a ng-if="resource.resource_type=='OS::Neutron::Port'" force-Href="#/viewPort?id={{resource.physical_resource_id}}">{{resource.physical_resource_id}}</a>
+                   <dd ng-if="resource.resource_type=='OS::Neutron::FloatingIP'">{{resource.physical_resource_id}}</dd>
                 </dd>
             </dl>
             <dl>
