2017-02-20:整合port以及stack详情页面

--- a/web/app/components/servers/instanceDetail.html
+++ b/web/app/components/servers/instanceDetail.html
@@ -155,7 +155,7 @@
                                         <tr ng-repeat="req in request">
                                             <td>{{req.request_id}}</td>
                                             <td>{{req.action}}</td>
-                                            <td>{{req.start_time}}</td>
+                                            <td>{{req.start_time|date:'yyyy-MM-dd hh:mm:ss'}}</td>
                                             <td>{{req.user_id}}</td>
                                             <td>-</td>
                                         </tr>
