--- a/web/app/components/servers/stackDetail.html
+++ b/web/app/components/servers/stackDetail.html
@@ -43,7 +43,7 @@
                                     <dl>
                                         <dt>已创建</dt>
                                         <dd>
-                                        {{stack.creation_time}}
+                                            {{stack.creation_time}}
                                         </dd>
                                     </dl>
                                     <dl>
@@ -83,27 +83,27 @@
                                         <dt>OS::stack_name</dt>
                                         <dd>{{stack.parameters["OS::stack_name"]}}</dd>
                                     </dl>
-                                    <dl>
+                                    <dl ng-if="stack.parameters.key_name.length>0">
                                         <dt>key_name</dt>
                                         <dd>{{stack.parameters.key_name}}</dd>
                                     </dl>
-                                    <dl>
+                                    <dl ng-if="stack.parameters.image.length>0">
                                         <dt>image</dt>
                                         <dd>{{stack.parameters.image}}</dd>
                                     </dl>
-                                    <dl>
+                                    <dl ng-if="stack.parameters.public_net_id.length>0">
                                         <dt>public_net_id</dt>
                                         <dd>{{stack.parameters.public_net_id}}</dd>
                                     </dl>
-                                    <dl>
+                                    <dl ng-if="stack.parameters.private_net_id.length>0">
                                         <dt>private_net_id</dt>
                                         <dd>{{stack.parameters.private_net_id}}</dd>
                                     </dl>
-                                    <dl>
+                                    <dl ng-if="stack.parameters.flavor.length>0">
                                         <dt>flavor</dt>
                                         <dd>{{stack.parameters.flavor}}</dd>
                                     </dl>
-                                    <dl>
+                                    <dl ng-if="stack.parameters.private_subnet_id.length>0">
                                         <dt>private_subnet_id</dt>
                                         <dd>{{stack.parameters.private_subnet_id}}</dd>
                                     </dl>
@@ -118,8 +118,8 @@
                                     <dl>
                                         <dt>回滚</dt>
                                         <dd>
-                                            <dd ng-if="stack.disable_rollback==true">已关闭</dd>
-                                            <dd ng-if="stack.disable_rollback==false">未关闭</dd>
+                                        <dd ng-if="stack.disable_rollback==true">已关闭</dd>
+                                        <dd ng-if="stack.disable_rollback==false">未关闭</dd>
                                         </dd>
                                     </dl>
                                 </div>
@@ -128,7 +128,7 @@
                                 <table class="table table-striped table-bordered table-hover" style="margin:0px;">
                                     <thead>
                                     <tr class="success">
-                                        <th><input type="checkbox" id="selectAll"></th>
+                                        <th style="text-align:center"><input type="checkbox" id="selectAll"></th>
                                         <th>栈资源</th>
                                         <th>资源</th>
                                         <th>栈资源类型</th>
@@ -139,25 +139,31 @@
                                     </thead>
                                     <tbody>
                                     <tr ng-repeat="resource in resourceList">
-                                        <td><input type="checkbox"></td>
+                                        <td style="text-align:center"><input type="checkbox"></td>
                                         <td>
                                             <a href="#/viewResource?id={{stack.id}}&stackName={{stack.stack_name}}&resourceName={{resource.resource_name}}">{{resource.resource_name}}</a>
                                         </td>
                                         <td>
-                                            <a ng-if="resource.resource_type=='OS::Heat::ResourceGroup'" force-Href="#/viewStack?id={{resource.physical_resource_id}}">{{resource.physical_resource_id}}</a>
-                                            <a ng-if="resource.resource_type=='OS::Nova::Server'" force-Href="#/viewInstance?id={{resource.physical_resource_id}}">{{resource.physical_resource_id}}</a>
-                                            <a ng-if="resource.resource_type=='OS::Neutron::Port'" force-Href="#/viewPort?id={{resource.physical_resource_id}}">{{resource.physical_resource_id}}</a>
-                                            <dd ng-if="resource.resource_type=='OS::Neutron::FloatingIP'">{{resource.physical_resource_id}}</dd>
+                                            <a ng-if="resource.resource_type=='OS::Heat::ResourceGroup'"
+                                               force-Href="#/viewStack?id={{resource.physical_resource_id}}">{{resource.physical_resource_id}}</a>
+                                            <a ng-if="resource.resource_type=='OS::Nova::Server'"
+                                               force-Href="#/viewInstance?id={{resource.physical_resource_id}}">{{resource.physical_resource_id}}</a>
+                                            <a ng-if="resource.resource_type=='OS::Neutron::Port'"
+                                               force-Href="#/viewPort?id={{resource.physical_resource_id}}">{{resource.physical_resource_id}}</a>
+                                            <label
+                                                ng-if="resource.resource_type=='OS::Neutron::FloatingIP'">
+                                                {{resource.physical_resource_id}}
+                                            </label>
                                         </td>
                                         <td>{{resource.resource_type}}</td>
-                                        <td>{{resource.updated_time}}</td>
+                                        <td>{{resource.updated_time | date:'yyyy-MM-dd hh:mm:ss'}}</td>
                                         <td>
                                             <dd ng-if="resource.resource_status=='CREATE_COMPLETE'">创建完成</dd>
                                             <dd ng-if="resource.resource_status=='CREATE_IN_PROGRESS'">创建中</dd>
-                                            </td>
+                                        </td>
                                         <td>{{resource.resource_status_reason}}</td>
                                         <!--<td>-->
-                                            <!--<button type="button" class="btn btn-primary btn-sm cellBtn">编辑</button>-->
+                                        <!--<button type="button" class="btn btn-primary btn-sm cellBtn">编辑</button>-->
                                         <!--</td>-->
                                     </tr>
                                     </tbody>
@@ -168,7 +174,7 @@
                                 <table class="table table-striped table-bordered table-hover" style="margin:0px;">
                                     <thead>
                                     <tr class="success">
-                                        <th><input type="checkbox" id="selectAll1"></th>
+                                        <th style="text-align:center"><input type="checkbox" id="selectAll1"></th>
                                         <th>栈资源</th>
                                         <th>事件后时间</th>
                                         <th>状态</th>
@@ -177,19 +183,26 @@
                                     </thead>
                                     <tbody>
                                     <tr ng-repeat="event in eventList">
-                                        <td><input type="checkbox"></td>
+                                        <td style="text-align:center"><input type="checkbox"></td>
                                         <td>
-                                            <dd ng-if="event.resource_name==stack.stack_name">{{event.resource_name}}</dd>
-                                            <a ng-if="event.resource_name!=stack.stack_name" href="#viewResource?id={{stack.id}}&stackName={{stack.stack_name}}&resourceName={{event.resource_name}}">{{event.resource_name}}</a>
+                                            <label style="margin:0px" ng-if="event.resource_name==stack.stack_name">
+                                                {{event.resource_name}}
+                                            </label>
+                                            <a ng-if="event.resource_name!=stack.stack_name"
+                                               href="#viewResource?id={{stack.id}}&stackName={{stack.stack_name}}&resourceName={{event.resource_name}}">{{event.resource_name}}</a>
                                         </td>
-                                        <td>{{event.event_time}}</td>
+                                        <td>{{event.event_time| date:'yyyy-MM-dd hh:mm:ss'}}</td>
                                         <td>
-                                            <dd ng-if="event.resource_status=='CREATE_COMPLETE'">创建完成</dd>
-                                            <dd ng-if="event.resource_status=='CREATE_IN_PROGRESS'">创建中</dd>
-                                           </td>
+                                            <label style="margin:0px" ng-if="event.resource_status=='CREATE_COMPLETE'">
+                                                创建完成
+                                            </label>
+                                            <label style="margin:0px" ng-if="event.resource_status=='CREATE_IN_PROGRESS'">
+                                                创建中
+                                            </label>
+                                        </td>
                                         <td>{{event.resource_status_reason}}</td>
                                         <!--<td>-->
-                                            <!--<button type="button" class="btn btn-primary btn-sm cellBtn">编辑</button>-->
+                                        <!--<button type="button" class="btn btn-primary btn-sm cellBtn">编辑</button>-->
                                         <!--</td>-->
                                     </tr>
                                     </tbody>
