--- a/web/app/components/servers/stackDetail.html
+++ b/web/app/components/servers/stackDetail.html
@@ -6,9 +6,7 @@
                 <div class="span12">
                     <div class="tabbable" id="tabs-829056">
                         <ul class="nav nav-tabs" style="margin-bottom:5px;">
-                            <li class="active" style="width:100px;text-align:center">
-                                <a data-target="#showSummary" data-toggle="tab">概况</a>
-                            </li>
+                            <li class="active" style="width:100px;text-align:center">v  </li>
                             <li style="width:100px;text-align:center">
                                 <a data-target="#showResources" data-toggle="tab" ng-click="loadResource()">资源</a>
                             </li>
