增加DispatcherController用于分发来自paas的请求、调整本地存储时token等的名称，防止冲突、修复因超时导致页面重新登录，跳转失败问题

--- a/web/app/components/servers/instanceDetail.html
+++ b/web/app/components/servers/instanceDetail.html
@@ -9,8 +9,7 @@
                             <li class="active" style="width:100px;text-align:center">
                                 <a data-target="#viewSummary" data-toggle="tab">概況</a>
                             </li>
-                            <li style="width:100px;text-align:center"
-                            ">
+                            <li style="width:100px;text-align:center">
                             <a data-target="#viewLog" data-toggle="tab" ng-click="showConsoleLog()">日志</a>
                             </li>
                             <li style="width:100px;text-align:center">
