--- a/web/app/components/summary/totalSummary.html
+++ b/web/app/components/summary/totalSummary.html
@@ -46,10 +46,12 @@
     <div class="container-fluid" style="clear:both;">
         <h3>虚拟机清单</h3>
         <div style="text-align:right">
-            <span style="font-size:15px;width:100px;text-align: center;">条件过滤:</span>
+            <span style="font-size:15px;width:100px;text-align: center;"><i class="fa fa-search fa-lg"></i></span>
             <input type="text" ng-model="searchText" class="form-control" id="name" placeholder="请输入实例名"
                    style="height:30px;width:160px;margin:0px;" ng-change="search()"/>
-            <!--<button ng-click="exportData()" class="btn btn-primary" style="height:30px;margin:0px;">信息导出</button>-->
+            <button type="button" ng-click="exportData()" class="btn btn-primary" style="height:30px;margin:0px;">
+                <i class="fa fa-download fa-lg"></i>下载CSV概览
+            </button>
         </div>
         <div class="row-fluid">
             <div class="span12">
@@ -75,7 +77,8 @@
                     <tfoot>
                     <td colspan="5" class="pagination" style="text-align:left"
                         ng-init="hasFilter=false">
-                        <select style="width:80px" ng-init="pageShow = pageList[0]" ng-model="pageShow" ng-show="!hasFilter"
+                        <select style="width:80px" ng-init="pageShow = pageList[0]" ng-model="pageShow"
+                                ng-show="!hasFilter"
                                 ng-options="x for x in pageList" ng-change="changePerPage(pageShow)">
                         </select>
                         <ul style="height:25px;">
