--- a/web/app/components/summary/totalSummary_en.html
+++ b/web/app/components/summary/totalSummary_en.html
@@ -46,10 +46,12 @@
     <div class="container-fluid" style="clear:both;">
         <h3>Usage Summary</h3>
         <div style="text-align:right">
-            <span style="font-size:15px;width:100px;text-align: center;">Filter:</span>
+            <span style="font-size:15px;width:100px;text-align: center;"><i class="fa fa-search fa-lg"></i></span>
             <input type="text" ng-model="searchText" class="form-control" id="name" placeholder="Enter Instance Name"
                    style="height:30px;width:160px;margin:0px;" ng-change="search()"/>
-            <!--<button ng-click="exportData()" class="btn btn-primary" style="height:30px;margin:0px;">信息导出</button>-->
+            <button type="button" ng-click="exportData()" class="btn btn-primary" style="height:30px;margin:0px;">
+                <i class="fa fa-download fa-lg"></i>Download CSV Summary
+            </button>
         </div>
         <div class="row-fluid">
             <div class="span12">
@@ -76,7 +78,8 @@
                     <td colspan="5" class="pagination" style="text-align:left"
                         ng-init="hasFilter=false">
                         <select style="width:80px" ng-init="pageShow = pageList[0]" ng-model="pageShow"
-                                ng-options="x for x in pageList" ng-change="changePerPage(pageShow)" ng-show="!hasFilter">
+                                ng-options="x for x in pageList" ng-change="changePerPage(pageShow)"
+                                ng-show="!hasFilter">
                         </select>
                         <ul style="height:25px;">
                             <li>
